Fraction Matcher: Added a new tab for "mixed numbers"
Fraction Matcher: Removed unused field, see #3357
# 0.00.97 (65476) Jun 27, 2012
Build a Fraction: Only show the "add container" button if there is at least one fraction > 1
Fraction Matcher: Added documentation to Vector2D class, see #3357
Fraction Matcher: Added documentation for Controller class, see #3357
Fraction Matcher: Added documentation for FNode class, see #3357
Fraction Matcher: Generalized code in StarSetNode regarding generation of stars and pieces of stars, see #3357
Fraction Matcher: Addressed a few review comments, see #3357
Converted to use colorblind friendly red, see #3357
add REVIEW comments based on a quick scan of each class file in fractions package
add REVIEW comments based on a quick scan of each class file in fractionmatcher package
# 0.00.96 (65450) Jun 26, 2012
Equality lab tab: Made the number line show tickmarks differently on left and right side
# 0.00.95 (65443) Jun 26, 2012
Build a Fraction: When ejecting a box from the scoring cell, move it back to toolboxes
Build a Fraction: Up/down spinner buttons should fade out when going to target box.
Build a Fraction: Improved level navigation and wired up smilie face buttons
Build a Fraction: Numbers: Added "reset" button for each scene
Build a Fraction: Pictures: Added "reset" button for each scene
Build a Fraction: Pictures: Pieces should go back to the toolbox if split from a container
Build a Fraction: added ContainerFrontNode to hide seams and show the container divisions lines more clearly
Build a Fraction: added level title to picture and number scenes
Build a Fraction: Added new level selection screen
Build a Fraction: Pictures: Removed border for dragged pieces
# 0.00.94 (65403) Jun 22, 2012
# 0.00.93 (65401) Jun 22, 2012
Build a Fraction: Animate out containers when the play area has none